--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,4 +1,10 @@
 <!-- chat/templates/chat/room.html -->
+
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'chat/style.css' %}">
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +12,59 @@
     <title>Chat Room</title>
 </head>
 <body>
+
     <textarea id="chat-log" cols="100" rows="20"></textarea><br/>
-    <input id="chat-message-input" type="text" size="100"/><br/>
+    <input id="chat-message-input" type="text" size="75"/><br/>
     <input id="chat-message-submit" type="button" value="Send"/>
+
+    <!--<div class=cable></div> -->
+    <div class=controller>
+        <div class=centerBlue>
+            <div class=centerLeft></div>   
+            <div class=centerRight></div>  
+        </div>
+        <div class=centerStart>
+            <div class=SLeft></div>
+            <div class=SRight></div>
+        </div>
+        <div class=centerSelect>
+            
+            <div class=SLeft></div>
+            <div class=SRight></div>
+        </div>
+
+ 
+        <div class=controllerLeft>
+            <div class=circle></div>
+            <div class=crossCenter>
+                <div class=crossTop></div>
+                <button type="button" class="crossTop" style="opacity: 0;" onclick="sendMessage('forward')"></button>
+                <div class=crossBottom></div>
+                <button type="button" class="crossBottom" style="opacity: 0;" onclick="sendMessage('backward')"></button>
+                <div class=crossLeft></div>
+                <button type="button" class="crossLeft" style="opacity: 0;" onclick="sendMessage('left')"></button>
+                <div class=crossRight></div>
+                <button type="button" class="crossRight" style="opacity: 0;" onclick="sendMessage('right')"></button>
+                <div class=crossCircle></div>
+            </div>
+        </div>
+        
+        <div class=controllerRight>
+            <div class=backButton1Center>
+                <div class= cornerLeft1></div>
+                <div class= cornerRight1></div>
+            </div>
+            <div class=backButton2Center>
+                <div class= cornerLeft2></div>
+                <div class= cornerRight2></div>
+                <button type="button" class="cornerRight2" onclick="sendMessage('stop')"></button>
+            </div>
+        </div>
+    </div>
+
 </body>
+
+
 <script>
     var roomName = "{{ room_name|escapejs }}";
 
@@ -47,6 +102,17 @@
 
         messageInputDom.value = '';
     };
+
+    function sendMessage(message) {
+
+        document.querySelector('#chat-log').value += ('Message sent: ');
+        document.querySelector('#chat-log').value += (message + '\n');
+
+        chatSocket.send(JSON.stringify({
+            'message': message, 'recipient': 'chat_ble'
+        }));
+    };
+
 </script>
 </html>
 
