working stop and go

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -56,6 +56,7 @@
             </div>
             <div class=backButton2Center>
                 <div class= cornerLeft2></div>
+                <button type="button" class="cornerLeft2" onclick="sendMessage('go')"></button>
                 <div class= cornerRight2></div>
                 <button type="button" class="cornerRight2" onclick="sendMessage('stop')"></button>
             </div>
