--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -69,8 +69,15 @@
 <script>
     var roomName = "{{ room_name|escapejs }}";
 
+    // Support TLS-specific URLs, when appropriate.
+    if (window.location.protocol == "https:") {
+        var ws_scheme = "ws://";
+    } else {
+	var ws_scheme = "ws://";
+    };
+
     var chatSocket = new WebSocket(
-        'wss://' + window.location.host +
+        ws_scheme + window.location.host +
         '/ws/chat/' + roomName + '/');
 
     chatSocket.onmessage = function(e) {
