--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -71,16 +71,12 @@
 
     // Support TLS-specific URLs, when appropriate.
     if (window.location.protocol == "https:") {
-        var ws_scheme = "wss://";
+        var ws_scheme = "ws://";
     } else {
 	var ws_scheme = "ws://";
     };
 
-    var chatSocket = new WebSocket( ws_scheme + window.location.host + '/ws/chat/' + roomName + '/', {
-	  protocolVersion: 8,
-	  origin: window.location.protocol + '//' + window.location.host + '/ws/chat/' + roomName + '/',
-	  rejectUnauthorized: false
-    });
+    var chatSocket = new WebSocket(ws_scheme + window.location.host + '/ws/chat/' + roomName + '/'); 
 
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
