--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -71,7 +71,7 @@
 
     // Support TLS-specific URLs, when appropriate.
     if (window.location.protocol == "https:") {
-        var ws_scheme = "ws://";
+        var ws_scheme = "wss://";
     } else {
 	var ws_scheme = "ws://";
     };
