--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -8,7 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>Chat Room</title>
 </head>
 <body>
