--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -69,14 +69,10 @@
 <script>
     var roomName = "{{ room_name|escapejs }}";
 
-    // Support TLS-specific URLs, when appropriate.
-    if (window.location.protocol == "https:") {
-        var ws_scheme = "wss://";
-    } else {
-	var ws_scheme = "ws://";
-    };
-
-    var chatSocket = new WebSocket(ws_scheme + window.location.host + '/ws/chat/' + roomName + '/'); 
+    var wss_protocol = (window.location.protocol == 'https:') ? 'wss://': 'ws://';
+    var chatSocket = new WebSocket(
+        wss_protocol + window.location.host + '/ws/chat/' + roomName + '/'
+    );
 
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
