--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -7,7 +7,8 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
+    <script src="./reconnecting-websocket.js"></script>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>Chat Room</title>
 </head>
