--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -8,7 +8,8 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <!--<script src="./reconnecting-websocket.js"></script>-->
+    <script type="text/javascript" src="jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="reconnecting-websocket.min.js"></script>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>Chat Room</title>
 </head>
@@ -70,10 +71,15 @@
 <script>
     var roomName = "{{ room_name|escapejs }}";
 
-    var wss_protocol = (window.location.protocol == 'https:') ? 'wss://': 'ws://';
-    var chatSocket = new WebSocket(
-        wss_protocol + window.location.host + '/ws/chat/' + roomName + '/'
-    );
+	
+    // When we're using HTTPS, use WSS too.
+    var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+    var chatSocket = new ReconnectingWebSocket(ws_scheme + '://' + window.location.host + "/chat" + window.location.pathname);
+
+    //var wss_protocol = (window.location.protocol == 'https:') ? 'wss://': 'ws://';
+    //var chatSocket = new WebSocket(
+    //    wss_protocol + window.location.host + '/ws/chat/' + roomName + '/'
+    //);
 
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
