--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="charset=utf-8" http-equiv="Content-Type">
     <title>Chat Rooms</title>
 </head>
 <body>
