--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -10,7 +10,7 @@
 <head> 
     <script type="text/javascript" src="jquery-1.12.1.min.js"></script>
     <script type="text/javascript" src="reconnecting-websocket.min.js"></script>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="charset=utf-8" http-equiv="Content-Type">
     <title>Chat Room</title>
 </head>
 <body>
