--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -64,8 +64,9 @@
     </div>
 
 </body>
-<script type="text/javascript" src='{% static "jquery-1.12.1.min.js" %}'></script>
-<script type="text/javascript" src='{% static "reconnecting-websocket.min.js" %}'></script>
-<script type="text/javascript" src='{% static "chat.js" %}'></script>
+
+<script type="text/javascript" src='{% static "chat/jquery-1.12.1.min.js" %}'></script>
+<script type="text/javascript" src='{% static "chat/reconnecting-websocket.min.js" %}'></script>
+<script type="text/javascript" src='{% static "chat/chat.js" %}'></script>
 </html>
 
