--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -18,7 +18,7 @@
     <input id="chat-message-submit" type="button" value="Send"/>
 
     <!--<div class=cable></div> -->
-    <div class=controller>
+    <div class=controller id="button-handler">
         <div class=centerBlue>
             <div class=centerLeft></div>   
             <div class=centerRight></div>  
@@ -38,13 +38,13 @@
             <div class=circle></div>
             <div class=crossCenter>
                 <div class=crossTop></div>
-                <button type="button" class="crossTop" style="opacity: 0;" onclick="sendMessage('forward')"></button>
+                <input type="button" class="crossTop" style="opacity: 0;" id="forward"></button>
                 <div class=crossBottom></div>
-                <button type="button" class="crossBottom" style="opacity: 0;" onclick="sendMessage('backward')"></button>
+                <input type="button" class="crossBottom" style="opacity: 0;" id="backward"></button>
                 <div class=crossLeft></div>
-                <button type="button" class="crossLeft" style="opacity: 0;" onclick="sendMessage('left')"></button>
+                <input type="button" class="crossLeft" style="opacity: 0;" id="left"></button>
                 <div class=crossRight></div>
-                <button type="button" class="crossRight" style="opacity: 0;" onclick="sendMessage('right')"></button>
+                <input type="button" class="crossRight" style="opacity: 0;" id="right"></button>
                 <div class=crossCircle></div>
             </div>
         </div>
@@ -56,9 +56,9 @@
             </div>
             <div class=backButton2Center>
                 <div class= cornerLeft2></div>
-                <button type="button" class="cornerLeft2" onclick="sendMessage('go')"></button>
+                <input type="button" class="cornerLeft2" id="go"></button>
                 <div class= cornerRight2></div>
-                <button type="button" class="cornerRight2" onclick="sendMessage('stop')"></button>
+                <input type="button" class="cornerRight2" id="stop"></button>
             </div>
         </div>
     </div>
@@ -68,5 +68,6 @@
 <script type="text/javascript" src='{% static "chat/jquery-1.12.1.min.js" %}'></script>
 <script type="text/javascript" src='{% static "chat/reconnecting-websocket.min.js" %}'></script>
 <script type="text/javascript" src='{% static "chat/chat.js" %}'></script>
+
 </html>
 
