--- a/salty-brook-17226/chat/templates/chat/room.html
+++ b/salty-brook-17226/chat/templates/chat/room.html
@@ -1,7 +1,5 @@
 <!-- chat/templates/chat/chat.html -->
 
-
-
 <!DOCTYPE html>
 <html>
 <head> 
@@ -62,7 +60,10 @@
             </div>
         </div>
     </div>
-
+    <h1>streaming</h1>
+    <p>
+	<img src="" id="image">
+    </p>
 </body>
 
 <script type="text/javascript" src='{% static "chat/jquery-3.4.1.min.js" %}'></script>
